# fraud-detection-ML

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/943552130331811303/: meta.yaml
mlruns/943552130331811303/1d3211dd299d4cbd878e16dfbb8a402f/: meta.yaml
mlruns/943552130331811303/1d3211dd299d4cbd878e16dfbb8a402f/metrics/: pos_rate_overall
mlruns/943552130331811303/1d3211dd299d4cbd878e16dfbb8a402f/tags/: mlflow.runName
mlruns/943552130331811303/3f3902f2c4274dfd86c7353f95c8bbf8/: meta.yaml
mlruns/943552130331811303/3f3902f2c4274dfd86c7353f95c8bbf8/metrics/: auc_score  test_size
mlruns/943552130331811303/3f3902f2c4274dfd86c7353f95c8bbf8/outputs/m-a8d9e6005121454ba67723b5b1137288/: meta.yaml
mlruns/943552130331811303/3f3902f2c4274dfd86c7353f95c8bbf8/tags/: mlflow.runName
mlruns/943552130331811303/models/m-a8d9e6005121454ba67723b5b1137288/: meta.yaml
mlruns/943552130331811303/models/m-a8d9e6005121454ba67723b5b1137288/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlruns/943552130331811303/models/m-a8d9e6005121454ba67723b5b1137288/metrics/: auc_score  test_size
models/: feature_columns.pkl  feature_engineer.pkl
scripts/: train.py
src/api/: main.py
src/data/: generator.py
src/features/: engineer.py
src/models/: trainer.py
tests/: makefile.py  test_api.py  test_load.py
