[project]
name = "fraud-detection"
version = "0.1.0"
description = "End-to-end fraud detection service (ETL, training, API, MLOps)."
authors = [{ name = "RakshithReddyK", email = "rakshithreddykondra@gmail.com" }]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
  "pandas>=2.3.3,<3.0.0",
  "scikit-learn>=1.4.0,<2.0.0",
  "xgboost>=2.0.0,<4.0.0",
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.22,<1.0",
  "mlflow>=2.11,<4.0",
  "redis>=5.0,<6.0",
  "joblib>=1.3,<2.0",
  "requests (>=2.32.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "black>=24.4,<26.0",
  "ruff>=0.4,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.1,<8.0",
  "pre-commit>=3.6,<5.0"
]

# Tell Poetry not to install the current project (deps-only mode)
[tool.poetry]
package-mode = false

